--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html>
+
+<!-- create html root element -->
+<html lang="en" xml:lang="en">
+
+<!-- Create head -->
+<head>
+<meta charset="utf-8">
+<meta name="description" content="mini-app1challenge1-tictactoe">
+<meta name="author" content="THE_JasonSchreiber">
+
+</head>
 
 
+</html>
