Created html page/tictactoe table

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -5,11 +5,45 @@
 
 <!-- Create head -->
 <head>
-<meta charset="utf-8">
-<meta name="description" content="mini-app1challenge1-tictactoe">
-<meta name="author" content="THE_JasonSchreiber">
-
+  <meta charset="utf-8">
+  <meta name="description" content="mini-app1 challenge1 tictactoe">
+  <meta name="author" content="THE Jason Schreiber">
+  <title>Jason's Tic Tac Toe!</title>
+  <style type="text/css">
+    h1 {
+      text-align: center;
+    }
+    table {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    td {
+      width: 100px;
+      height: 100px;
+    }
+  </style>
 </head>
 
+<body>
+<h1>Jason's Tic Tac Toe</h1>
 
+<table border="5">
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+</body>
 </html>
