Added hover state to tictactoe boxes

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -21,6 +21,10 @@
       width: 100px;
       height: 100px;
     }
+    td:hover {
+     border: solid 2px greenyellow;
+    }
+
   </style>
 </head>
 
