'New Game' functionality implemented

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <meta name="description" content="mini-app1 challenge1 tictactoe">
   <meta name="author" content="THE Jason Schreiber">
+  <script type="text/javascript" src="app.js"></script>
   <title>Jason's Tic Tac Toe!</title>
   <style type="text/css">
     h1 {
@@ -24,12 +25,17 @@
     td:hover {
      border: solid 2px greenyellow;
     }
+    button {
+      text-align: center;
+    }
 
   </style>
 </head>
 
 <body>
 <h1>Jason's Tic Tac Toe</h1>
+
+<button type="button">Reset Game</button>
 
 <table border="5">
   <tr>
