Got resetButton eventListener to work

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -35,7 +35,7 @@
 <body>
 <h1>Jason's Tic Tac Toe</h1>
 
-<button type="button">Reset Game</button>
+<button class='resetButton' type="button">Reset Game</button>
 
 <table border="5">
   <tr>
