Implemented full app, but bugs present

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -28,6 +28,9 @@
     button {
       text-align: center;
     }
+    p {
+      text-align: center;
+    }
 
   </style>
 </head>
@@ -54,6 +57,8 @@
     <td></td>
   </tr>
 </table>
+
+<p id="turn">It is player X's turn to begin game</p>
 
 </body>
 </html>
