Fixed win condition bug

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -58,7 +58,7 @@
   </tr>
 </table>
 
-<p id="turn">It is player X's turn to begin game</p>
+<p id="turn">It is player X's turn to begin new game</p>
 
 </body>
 </html>
