--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div>Sup dude</div>
   </body>
   <script type="text/javascript" src="app.js"></script>
 </html>
