--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -9,5 +9,6 @@
   </body>
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" crossorigin></script>
   <script type="text/javascript" src="app.js"></script>
 </html>
