--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -11,8 +11,10 @@
       border: 2px red;
     }
   </style>
-</head>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+</head>
 
 <body>
 
@@ -20,26 +22,31 @@
   <h2>Insert your JSON data into the form below:</h2>
 <!--Create div with form and submit button-->
 <div class="form">
-  <form action="/convertToCSV" method="POST">
+  <form name="myForm" id="myForm">
+      <label for="myfile">Select a file:</label>
+      <input type="file" id="myfile" name="myfile">
     <div class="form">
-      <textArea type="text" name="inputText" id="inputText" rows="4" cols="50" required>{
-        "firstName": "Smitty",
-        "lastName": "Won",
-        "county": "San Mateo",
-        "city": "Redwood City",
-        "role": "Sales Person",
-        "sales": 4800000,
-        "children": []
-      }</textArea>
-    </div>
-    <div class="form">
-      <input type="submit" value="Submit!">
+      <input id="submitButton" type="submit" value="Submit!">
     </div>
   </form>
 </div>
-
+<div class="csvData"></div>
 </body>
 
 <script src="app.js"></script>
 </html>
 
+
+
+
+
+
+<!-- <textArea type="text" name="inputText" id="inputText" rows="4" cols="50" required>{
+        "firstName": "Smitty",
+          "lastName": "Won",
+            "county": "San Mateo",
+              "city": "Redwood City",
+                "role": "Sales Person",
+                  "sales": 4800000,
+                    "children": []
+      }</textArea> -->
